[package]
name = "imrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "imrs"
crate-type = ["cdylib"]

[dependencies]
gtk = "0.17.1"
libc = "0.2.140"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
